# fluidvoice-cli

./: ADOPT.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  UPSTREAM_ISSUE.md  pyproject.toml
.github/ISSUE_TEMPLATE/: api_mismatch.md
.github/workflows/: ci.yml
scripts/: install.sh  publish.sh
src/fluidvoice_cli/: __init__.py  __main__.py  client.py  config.py  errors.py  history.py  main.py  media.py  output.py
src/fluidvoice_cli/commands/: batch.py  dictionary.py  doctor.py  health.py  history_cmd.py  postprocess.py  transcribe.py
tests/: test_cli.py  test_client.py  test_history.py  test_media.py
