[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fluidvoice-cli"
version = "0.1.1"
description = "Professional CLI for FluidVoice Local API — batch transcription, history, and dictionary tools"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "FluidVoice CLI Contributors" }]
keywords = ["fluidvoice", "transcription", "speech-to-text", "macos", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Utilities",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "rich>=13.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.6",
]

[project.scripts]
fluidvoice = "fluidvoice_cli.main:app"

[project.urls]
Homepage = "https://github.com/altic-dev/FluidVoice"
Documentation = "https://github.com/altic-dev/FluidVoice"
Repository = "https://github.com/EBay1992/fluidvoice-cli"
Issues = "https://github.com/EBay1992/fluidvoice-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/fluidvoice_cli"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.coverage.run]
source = ["fluidvoice_cli"]
omit = ["*/tests/*"]
